# nexo-plugin-whatsapp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: auto_discovery.rs  bot_registry.rs  bridge.rs  config.rs  configured_state.rs  dispatch.rs  env_config.rs  events.rs  lib.rs  lifecycle.rs  main.rs  media.rs  pairing_admin.rs  pairing_trigger.rs  plugin.rs  session.rs  session_id.rs  subprocess_dispatch.rs  tool.rs  transcriber.rs
tests/: bridge_test.rs  config_parse_test.rs  configure_path.rs  credentials_path.rs  e2e_handshake.rs  live_wa_test.rs
