# Phase 81.19.a — out-of-tree standalone repo.
#
# Built as a binary subprocess plugin loaded by the nexo-rs daemon
# via discovery + auto-subprocess fallback (Phase 81.17 + 81.17.b);
# also imported as a lib path-dep by the daemon today (subprocess
# flip is the deferred follow-up `81.18.b`, shared with telegram).
#
# Path deps to `../proyecto/crates/...` are interim — they ship
# this repo today before nexo-microapp-sdk + nexo-config + the
# rest publish to crates.io. Operators outside the monorepo build
# the binary against published crates.io versions; the
# `Cargo.lock` (committed; binary repo convention) pins the
# resolved versions for reproducibility.

[package]
name        = "nexo-plugin-whatsapp"
version     = "0.4.4"
description = "WhatsApp bot plugin for Nexo agents (out-of-tree subprocess + embedded lib)."
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/lordmacu/nexo-plugin-whatsapp"
authors     = ["Cristian García <informacion@cristiangarcia.co>"]
readme      = "README.md"
keywords    = ["nexo", "plugin", "whatsapp", "signal", "agent"]
categories  = ["api-bindings", "command-line-utilities"]
rust-version = "1.75"

[lib]
name = "nexo_plugin_whatsapp"
path = "src/lib.rs"

[[bin]]
name = "nexo-plugin-whatsapp"
path = "src/main.rs"

[features]
# Default keeps the OpenSSL TLS stack via wa-agent's
# `native-tls` feature. Existing operators get byte-equivalent
# behaviour without flipping any flags.
default = ["native-tls"]

# Mobile / in-process consumer drops the subprocess loop + tool
# dispatch helpers. Lib re-exports stay so the host can import
# `WhatsappPlugin` directly through the factory builder.
embedded = []

# Phase 90 mobile (Android NDK) — pure-rustls TLS stack so the
# binary cross-compiles cleanly without OpenSSL system headers.
# Mutually exclusive with `native-tls`; consumers pinning this
# feature must also set `default-features = false`.
mobile = ["rustls-tls"]

# Explicit TLS backend selectors. Forwarded to the wa-agent
# upstream feature gate (`c9ccec0` + later) so the plugin's
# choice cascades all the way to `tokio-tungstenite`'s TLS
# backend.
native-tls = ["wa-agent/native-tls"]
rustls-tls = ["wa-agent/rustls-tls"]

# E2E live WhatsApp test (preserves existing gate; requires a
# paired device).
live-wa = []

[dependencies]
# Path-deps interim until proyecto crates publish to crates.io.
# Phase 81.20.x F-portable — framework deps from crates.io only.
# Path-deps to `../proyecto/crates/...` removed so this repo is
# self-contained: anyone can clone + `cargo build` without
# the proyecto sibling on disk.
nexo-microapp-sdk    = { version = "0.1.18", features = ["plugin"] }
nexo-broker          = "0.1.5"
nexo-core            = "0.1.19"
nexo-config          = "0.1.9"
nexo-llm             = "0.1.5"
nexo-auth            = "0.1.8"
nexo-pairing         = { version = "0.1.6", default-features = false }
nexo-plugin-manifest = "0.1.6"
nexo-tool-meta       = "0.1.15"

# Upstream wa-agent — wraps Signal Protocol + QR pairing + Bot API.
# Pinned to crates.io so this plugin is publishable + `cargo install`-able
# standalone (no git deps). Needs the TLS feature split (`native-tls` /
# `rustls-tls`) and the `ChatPresenceState` / `TypingMode` / `RunAgentOpts`
# / `send_chat_presence` / `run_agent_with_opts` APIs — all in 0.1.6+.
wa-agent = { version = "0.1.6", default-features = false }

# Standard async + serde + crypto + media + tracing
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "process"] }
tokio-util         = "0.7"
async-trait        = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v5"] }
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap            = "6"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64             = "0.22"
futures            = "0.3"
qrcode             = { version = "0.14", default-features = false }
image              = { version = "0.25", default-features = false, features = ["png"] }
toml               = "0.8"
once_cell          = "1"
rustls             = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_yaml  = "0.9"
dashmap     = "6"
serial_test = "3"
tempfile    = "3"
wiremock    = "0.6"

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"

# Mirror the proyecto workspace `[workspace.lints.clippy]` allow-list
# so the verbatim-copied modules don't trip clippy gates that the
# upstream workspace already silences (Phase 34.x hardening
# territory). Re-enable when a sprint cleans the source up.
[lints.clippy]
field_reassign_with_default = "allow"
too_many_arguments          = "allow"
needless_borrows_for_generic_args = "allow"
print_literal               = "allow"
doc_lazy_continuation       = "allow"
doc_overindented_list_items = "allow"
unnecessary_map_or          = "allow"
collapsible_if              = "allow"
manual_strip                = "allow"
io_other_error              = "allow"
trim_split_whitespace       = "allow"
if_same_then_else           = "allow"
unnecessary_to_owned        = "allow"
let_and_return              = "allow"
bool_assert_comparison      = "allow"
type_complexity             = "allow"
unwrap_or_default           = "allow"
cmp_owned                   = "allow"
should_implement_trait      = "allow"
incompatible_msrv           = "allow"
match_like_matches_macro    = "allow"
needless_as_bytes           = "allow"
manual_ignore_case_cmp      = "allow"
vec_init_then_push          = "allow"
needless_lifetimes          = "allow"
len_without_is_empty        = "allow"
blocks_in_conditions        = "allow"
await_holding_lock          = "allow"
result_large_err            = "allow"
large_enum_variant          = "allow"
derivable_impls             = "allow"
single_char_pattern         = "allow"
redundant_closure           = "allow"
question_mark               = "allow"
unnecessary_literal_unwrap  = "allow"
